# hello-cpp

./: CMakeLists.txt  CMakePresets.json  build.sh
.github/workflows/: cmake.yml
src/: helpers.hpp  main.cpp
